[gd_scene load_steps=5 format=3 uid="uid://ccvi3ga25277e"]

[ext_resource type="Script" path="res://src/main/image_layer_timeline/image_layer_timeline.gd" id="1_by60s"]
[ext_resource type="Script" path="res://src/main/image_layer_timeline/frame_track.gd" id="2_g6gli"]

[sub_resource type="Animation" id="Animation_0g8r7"]
resource_name = "test"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0yohl"]
_data = {
"test": SubResource("Animation_0g8r7")
}

[node name="ImageLayerTimeline" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_by60s")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Templates" type="Node" parent="."]

[node name="FrameItemTemplate" type="HBoxContainer" parent="Templates"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
offset_left = 31.0
offset_top = -121.0
offset_right = 569.0
offset_bottom = -81.0
size_flags_horizontal = 3
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Templates/FrameItemTemplate"]
layout_mode = 2
mouse_filter = 1
text = "Layer 1"

[node name="VSeparator" type="VSeparator" parent="Templates/FrameItemTemplate"]
layout_mode = 2
mouse_filter = 1

[node name="FrameTrack" type="Control" parent="Templates/FrameItemTemplate"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
script = ExtResource("2_g6gli")
frame_image_size = 40.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NewLayer" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "New Layer"

[node name="NewFrame" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "New Frame"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Play"

[node name="Stop" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Stop"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="frames_container" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0yohl")
}

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/NewLayer" to="." method="_on_new_layer_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/NewFrame" to="." method="_on_new_frame_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Stop" to="." method="_on_stop_pressed"]
